--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "react-native-progress": "5.0.0",
     "react-native-reanimated": "2.14.4",
     "react-native-webview": "11.26.1"
   }
