--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "color": "4.2.3",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-fast-image": "8.6.3",
