--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@shopify/restyle": "2.4.1",
     "apollo-link-timeout": "4.0.0",
     "color": "4.2.3",
     "react": "18.2.0",
