--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@react-native-community/datetimepicker": "6.7.5",
     "@react-native-community/picker": "1.6.1",
     "@react-navigation/native": "6.1.6",
+    "@react-navigation/native-stack": "6.9.12",
     "@shopify/react-graphql": "0.0.0-snapshot-20230110221326",
     "@shopify/restyle": "2.4.1",
     "@types/react": "18.0.30",
+    "@types/color": "3.0.3",
+    "@types/url-parse": "1.4.3",
     "apollo-link-timeout": "4.0.0",
     "color": "4.2.3",
     "react": "18.2.0",
@@ -25,6 +28,9 @@
     "react-native-localize": "2.2.6",
     "react-native-progress": "5.0.0",
     "react-native-reanimated": "2.14.4",
-    "react-native-webview": "11.26.1"
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "3.18.2",
+    "react-native-webview": "11.26.1",
+    "url-parse": "1.5.10"
   }
 }
