--- a/package.json
+++ b/package.json
@@ -30,7 +30,11 @@
     "react-native-reanimated": "2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "3.18.2",
+    "react-native-svg": "13.8.0",
     "react-native-webview": "11.26.1",
     "url-parse": "1.5.10"
+  },
+  "resolutions": {
+    "@types/react": "^18"
   }
 }
