--- a/package.json
+++ b/package.json
@@ -18,19 +18,24 @@
     "@shopify/restyle": "2.4.1",
     "@types/color": "3.0.3",
     "@types/react": "18.0.30",
+    "@types/react-native-video": "5.0.14",
     "@types/url-parse": "1.4.3",
     "apollo-link-timeout": "4.0.0",
     "color": "4.2.3",
+    "intl": "1.2.5",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-fast-image": "8.6.3",
     "react-native-gesture-handler": "2.9.0",
+    "react-native-linear-gradient": "2.6.2",
     "react-native-localize": "2.2.6",
     "react-native-progress": "5.0.0",
     "react-native-reanimated": "2.14.4",
+    "react-native-render-html": "6.3.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "3.18.2",
     "react-native-svg": "13.8.0",
+    "react-native-video": "5.2.1",
     "react-native-webview": "11.26.1",
     "url-parse": "1.5.10"
   },
