--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "6.9.12",
     "@shopify/react-graphql": "0.0.0-snapshot-20230110221326",
     "@shopify/restyle": "2.4.1",
+    "@shopify/shop-minis-platform-sdk": "^0.1.25",
     "@types/color": "3.0.3",
     "@types/react": "18.0.30",
     "@types/react-native-video": "5.0.14",
