--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@shopify/restyle": "2.4.1",
     "@shopify/shop-minis-platform-sdk": "^0.1.25",
     "@types/color": "3.0.3",
+    "@types/lodash": "4.14.194",
     "@types/react": "18.0.30",
     "@types/react-native-video": "5.0.14",
     "@types/url-parse": "1.4.3",
     "apollo-link-timeout": "4.0.0",
     "color": "4.2.3",
     "intl": "1.2.5",
+    "lodash": "4.17.21",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-fast-image": "8.6.3",
