--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "shopify",
   "license": "MIT",
   "dependencies": {
+    "@babel/core": "7.21.8",
+    "@babel/plugin-transform-named-capturing-groups-regex": "7.20.5",
+    "@babel/plugin-transform-react-jsx": "7.21.5",
+    "@babel/runtime": "7.21.5",
     "@react-native-community/blur": "4.3.0",
     "@react-native-community/datetimepicker": "6.7.5",
     "@react-native-community/picker": "1.6.1",
@@ -23,9 +27,13 @@
     "@types/react-native-video": "5.0.14",
     "@types/url-parse": "1.4.3",
     "apollo-link-timeout": "4.0.0",
+    "babel-plugin-import-graphql": "2.8.1",
     "color": "4.2.3",
+    "graphql": "15.8.0",
+    "graphql-tag": "2.12.6",
     "intl": "1.2.5",
     "lodash": "4.17.21",
+    "metro-react-native-babel-preset": "0.76.3",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-fast-image": "8.6.3",
@@ -38,8 +46,11 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "3.18.2",
     "react-native-svg": "13.8.0",
+    "react-native-svg-transformer": "^1.0.0",
     "react-native-video": "5.2.1",
     "react-native-webview": "11.26.1",
+    "react-test-renderer": "18.2.0",
+    "typescript": "4.7.4",
     "url-parse": "1.5.10"
   },
   "resolutions": {
