--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "graphql-tag": "2.12.6",
     "lodash": "4.17.21",
     "metro-react-native-babel-preset": "0.76.3",
+    "moment": "2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-fast-image": "8.6.3",
