--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-community/blur": "4.3.2",
     "@react-native-community/datetimepicker": "6.7.5",
     "@react-native-community/picker": "1.6.1",
+    "@react-native-community/slider": "^4.4.2",
     "@react-navigation/native": "6.1.6",
     "@react-navigation/native-stack": "6.9.12",
     "@shopify/eslint-plugin-shop-minis": "^0.0.4",
