--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native": "0.71.8",
     "react-native-fast-image": "8.6.3",
     "react-native-gesture-handler": "2.9.0",
+    "react-native-haptic-feedback": "2.0.3",
     "react-native-linear-gradient": "2.7.2",
     "react-native-localize": "3.0.0",
     "react-native-reanimated": "3.3.0",
