--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/plugin-transform-react-jsx": "7.21.5",
     "@babel/runtime": "7.21.5",
     "@native-html/table-plugin": "5.3.1",
+    "@react-native-async-storage/async-storage": "1.19.0",
     "@react-native-community/blur": "4.3.2",
     "@react-native-community/datetimepicker": "6.7.5",
     "@react-native-community/picker": "1.6.1",
