--- a/package.json
+++ b/package.json
@@ -9,33 +9,33 @@
   "author": "shopify",
   "license": "MIT",
   "dependencies": {
-    "@babel/core": "7.21.8",
-    "@babel/plugin-transform-named-capturing-groups-regex": "7.20.5",
-    "@babel/plugin-transform-react-jsx": "7.21.5",
-    "@babel/runtime": "7.21.5",
+    "@babel/core": "7.22.10",
+    "@babel/plugin-transform-named-capturing-groups-regex": "7.22.5",
+    "@babel/plugin-transform-react-jsx": "7.22.5",
+    "@babel/runtime": "7.22.10",
     "@native-html/table-plugin": "5.3.1",
-    "@react-native-async-storage/async-storage": "1.19.0",
+    "@react-native-async-storage/async-storage": "1.19.2",
     "@react-native-community/blur": "4.3.2",
-    "@react-native-community/datetimepicker": "6.7.5",
+    "@react-native-community/datetimepicker": "7.4.1",
     "@react-native-community/picker": "1.6.1",
-    "@react-native-community/slider": "^4.4.2",
-    "@react-navigation/native": "6.1.6",
-    "@react-navigation/native-stack": "6.9.12",
-    "@shopify/eslint-plugin-shop-minis": "^0.0.4",
-    "@shopify/react-graphql": "0.0.0-snapshot-20230110221326",
+    "@react-native-community/slider": "4.4.2",
+    "@react-navigation/native": "6.1.7",
+    "@react-navigation/native-stack": "6.9.13",
+    "@shopify/eslint-plugin-shop-minis": "0.0.4",
+    "@shopify/react-graphql": "10.0.2",
     "@shopify/restyle": "2.4.2",
     "@shopify/shop-minis-platform-sdk": "0.1.50",
     "@types/color": "3.0.3",
-    "@types/lodash": "4.14.194",
-    "@types/react": "18.2.0",
+    "@types/lodash": "4.14.197",
+    "@types/react": "18.2.18",
     "@types/react-native-video": "5.0.14",
     "@types/url-parse": "1.4.3",
     "apollo-link-timeout": "4.0.0",
     "babel-plugin-import-graphql": "2.8.1",
-    "color": "4.2.3",
+    "color": "2.0.1",
     "graphql": "15.8.0",
     "graphql-tag": "2.12.6",
-    "lodash": "4.17.21",
+    "lodash": "2.3.0",
     "metro-react-native-babel-preset": "0.76.3",
     "moment": "2.29.4",
     "react": "18.2.0",
