--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,49 @@ build
 .DS_Store
 .eslintcache
 *.tsbuildinfo
+
+# Shopify specific
+.shopify
+.shopify-cache
+*.shopify.yml
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Dependencies
+/vendor/
+bower_components/
+
+# Testing
+coverage/
+.nyc_output
+
+# Production
+dist/
+out/
+
+# Misc
+.cache
+.temp
+.tmp
+*.bak
+*.orig
+
+# OS files
+Thumbs.db
