--- a/all-hooks/package.json
+++ b/all-hooks/package.json
@@ -12,7 +12,7 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
-    "@shopify/shop-minis-react": "latest",
+    "@shopify/shop-minis-react": "0.0.18",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
